--- a/index.html
+++ b/index.html
@@ -3,37 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Waifu Hello – Live2D</title>
+  <title>Waifu Hello</title>
   <style>
     * { margin:0; padding:0; }
-    body, html { 
-      height: 100%; 
-      overflow: hidden; 
-      background: linear-gradient(135deg, #ffeef8, #e0f7fa); 
-      font-family: 'Segoe UI', Arial, sans-serif;
-    }
-    canvas { 
-      display: block; 
-      position: absolute; 
-      top: 0; left: 0; 
-      width: 100%; height: 100%; 
-    }
+    body, html { height:100%; overflow:hidden; background:linear-gradient(135deg, #ffeef8, #e0f7fa); }
+    canvas { display:block; width:100%; height:100%; }
     #info {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255,255,255,0.8);
-      padding: 10px 20px;
-      border-radius: 25px;
-      font-size: 14px;
-      color: #d81b60;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      max-width: 80%;
-      text-align: center;
-      pointer-events: none;
+      position:absolute; bottom:20px; left:50%; transform:translateX(-50%);
+      background:rgba(255,255,255,0.9); padding:10px 20px; border-radius:25px;
+      font-size:14px; color:#d81b60; box-shadow:0 2px 10px rgba(0,0,0,0.1);
+      max-width:80%; text-align:center; pointer-events:none;
     }
-    #info::before { content: "👋 "; }
   </style>
 </head>
 <body>
@@ -43,15 +23,13 @@
 
 <!-- CDN: PixiJS -->
 <script src="https://cdn.jsdelivr.net/npm/pixi.js@7/dist/pixi.min.js"></script>
-
 <!-- CDN: Pixi-Live2D-Display -->
 <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display@0.5.0/dist/index.min.js"></script>
-
-<!-- CDN: Live2D Cubism Core -->
+<!-- CDN: Live2D Core -->
 <script src="https://cdn.jsdelivr.net/npm/@live2d/cubismcore@5.0.0/live2dcubismcore.min.js"></script>
 
 <script>
-// === INISIALISASI PIXI ===
+// Inisialisasi Pixi
 const app = new PIXI.Application({
   view: document.getElementById("canvas"),
   transparent: true,
@@ -59,35 +37,29 @@ const app = new PIXI.Application({
   resizeTo: window
 });
 
-// Resize otomatis
-window.addEventListener("resize", () => {
-  app.renderer.resize(window.innerWidth, window.innerHeight);
-});
+window.onresize = () => app.renderer.resize(innerWidth, innerHeight);
 
-// === LOAD MODEL HIYORI (DARI CDN SAMPLE) ===
+// Load model dari folder lokal
 (async () => {
   try {
-    const model = await PIXI.live2d.Live2DModel.from(
-      "https://cdn.jsdelivr.net/gh/Live2D/CubismWebSamples/Samples/Resources/Hiyori/Hiyori.model3.json"
-    );
-
+    const model = await PIXI.live2d.Live2DModel.from("model/Hiyori.model3.json");
     app.stage.addChild(model);
 
-    // Posisi & ukuran
-    const scale = Math.min(window.innerWidth, window.innerHeight) < 600 ? 0.25 : 0.35;
+    // Ukuran & posisi
+    const scale = innerWidth < 600 ? 0.25 : 0.35;
     model.scale.set(scale);
-    model.x = window.innerWidth / 2;
-    model.y = window.innerHeight - model.height * 0.6;
+    model.anchor.set(0.5, 0.5);
+    model.position.set(innerWidth / 2, innerHeight - 100);
 
-    // Gerakan idle (mata kedip)
+    // Idle animation
     model.motion("idle");
 
-    // === KLIK = NGOMONG + ANIMASI ===
+    // Klik → ngomong
     const greetings = [
       "Halo! Seneng ketemu kamu~",
       "Hai hai! Lagi apa nih?",
-      "Kyaa~ Jangan klik mulu dong!",
-      "Aku Hiyori, salam kenal ya!",
+      "Kyaa~ Jangan klik mulu!",
+      "Aku Hiyori, salam kenal!",
       "Yay! Kamu klik aku lagi!"
     ];
 
@@ -99,24 +71,30 @@ window.addEventListener("resize", () => {
     });
 
     // Bisa digeser
-    model.draggable = true;
+    let dragging = false;
+    model.on("pointerdown", () => dragging = true);
+    model.on("pointerup", () => dragging = false);
+    model.on("pointerupoutside", () => dragging = false);
+    model.on("pointermove", (e) => {
+      if (dragging) {
+        const pos = e.data.global;
+        model.position.set(pos.x, pos.y);
+      }
+    });
 
   } catch (err) {
-    document.getElementById("info").textContent = "Error loading model: " + err.message;
+    document.getElementById("info").textContent = "Error: " + err.message;
     console.error(err);
   }
 })();
 
-// === TEXT TO SPEECH (Bahasa Indonesia) ===
+// Text-to-Speech
 function speak(text) {
-  if ('speechSynthesis' in window) {
-    const utterance = new SpeechSynthesisUtterance(text);
-    utterance.lang = "id-ID";
-    utterance.rate = 0.9;
-    utterance.pitch = 1.3;
-    utterance.volume = 1;
-    speechSynthesis.speak(utterance);
-  }
+  const utterance = new SpeechSynthesisUtterance(text);
+  utterance.lang = "id-ID";
+  utterance.rate = 0.9;
+  utterance.pitch = 1.3;
+  speechSynthesis.speak(utterance);
 }
 </script>
 
