--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Waifu Hello</title>
+  <title>Waifu Hello – Fixed!</title>
   <style>
     * { margin:0; padding:0; }
-    body, html { height:100%; overflow:hidden; background:linear-gradient(135deg, #ffeef8, #e0f7fa); }
+    body, html { height:100%; overflow:hidden; background:linear-gradient(135deg, #ffeef8, #e0f7fa); font-family: 'Segoe UI', Arial, sans-serif; }
     canvas { display:block; width:100%; height:100%; }
     #info {
       position:absolute; bottom:20px; left:50%; transform:translateX(-50%);
@@ -14,23 +14,34 @@
       font-size:14px; color:#d81b60; box-shadow:0 2px 10px rgba(0,0,0,0.1);
       max-width:80%; text-align:center; pointer-events:none;
     }
+    #info::before { content: "👋 "; }
   </style>
 </head>
 <body>
 
 <canvas id="canvas"></canvas>
-<div id="info">Klik aku! Aku mau ngomong~</div>
+<div id="info">Loading waifu... Klik setelah muncul!</div>
+
+<!-- CDN: Live2D Core (load duluan!) -->
+<script src="https://cubism.live2d.com/sdk-web/live2dcubismcore.min.js"></script>
 
 <!-- CDN: PixiJS -->
 <script src="https://cdn.jsdelivr.net/npm/pixi.js@7/dist/pixi.min.js"></script>
-<!-- CDN: Pixi-Live2D-Display -->
+
+<!-- CDN: Pixi-Live2D-Display (import langsung) -->
 <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display@0.5.0/dist/index.min.js"></script>
 
-<!-- CDN CORE YANG JALAN (RESMI LIVE2D) -->
-<script src="https://cubism.live2d.com/sdk-web/live2dcubismcore.min.js"></script>
-
 <script>
-// Pixi App
+// Expose PIXI ke window (WAJIB buat plugin!)
+window.PIXI = PIXI;
+
+// Cek kalo Live2DModel udah ada
+if (typeof PIXI.live2d === 'undefined' || typeof PIXI.live2d.Live2DModel === 'undefined') {
+  document.getElementById("info").textContent = "Error: Plugin gak load! Cek console.";
+  throw new Error("Live2DModel undefined!");
+}
+
+// Inisialisasi Pixi App
 const app = new PIXI.Application({
   view: document.getElementById("canvas"),
   transparent: true,
@@ -38,55 +49,77 @@ const app = new PIXI.Application({
   resizeTo: window
 });
 
-window.onresize = () => app.renderer.resize(innerWidth, innerHeight);
+window.addEventListener("resize", () => {
+  app.renderer.resize(window.innerWidth, window.innerHeight);
+});
 
-// Load model lokal
+// Load model dari folder lokal
 (async () => {
   try {
+    // GUNAKAN PIXI.live2d.Live2DModel (bukan import terpisah!)
     const model = await PIXI.live2d.Live2DModel.from("model/Hiyori.model3.json");
     app.stage.addChild(model);
 
     // Ukuran & posisi
-    const scale = innerWidth < 600 ? 0.25 : 0.35;
+    const scale = window.innerWidth < 600 ? 0.25 : 0.35;
     model.scale.set(scale);
     model.anchor.set(0.5, 0.5);
-    model.position.set(innerWidth / 2, innerHeight - 100);
+    model.position.set(window.innerWidth / 2, window.innerHeight - 100);
 
-    // Idle
+    // Idle animation (kedip mata)
     model.motion("idle");
 
-    // Klik → ngomong
+    // Klik → ngomong + animasi
     const greetings = [
       "Halo! Seneng ketemu kamu~",
       "Hai hai! Lagi apa nih?",
-      "Kyaa~ Jangan klik mulu!",
-      "Aku Hiyori, salam kenal!",
+      "Kyaa~ Jangan klik mulu dong!",
+      "Aku Hiyori, salam kenal ya!",
       "Yay! Kamu klik aku lagi!"
     ];
 
-    model.on("pointertap", () => {
-      const text = greetings[Math.floor(Math.random() * greetings.length)];
-      speak(text);
-      model.motion("tap_body");
-      document.getElementById("info").textContent = text;
+    // Gunakan 'hit' event buat deteksi klik (lebih akurat)
+    model.on("hit", (hitAreas) => {
+      if (hitAreas.includes("Body")) {  // Case-sensitive: "Body" buat Hiyori
+        const text = greetings[Math.floor(Math.random() * greetings.length)];
+        speak(text);
+        model.motion("tap_body");
+        document.getElementById("info").textContent = text;
+      }
     });
 
-    // Drag
-    model.draggable = true;
+    // Drag (simple)
+    model.interactive = true;
+    let dragging = false;
+    model.on("pointerdown", () => dragging = true);
+    model.on("pointerup", () => dragging = false);
+    model.on("pointerupoutside", () => dragging = false);
+    app.stage.on("pointermove", (e) => {
+      if (dragging) {
+        model.position.set(e.global.x, e.global.y);
+      }
+    });
+
+    document.getElementById("info").textContent = "Halo dari Hiyori! Klik body-nya~";
 
   } catch (err) {
-    document.getElementById("info").textContent = "Error: " + err.message;
-    console.error(err);
+    document.getElementById("info").textContent = "Error load model: " + err.message;
+    console.error("Full error:", err);
   }
 })();
 
-// TTS
+// Text-to-Speech (Indonesia)
 function speak(text) {
-  const utterance = new SpeechSynthesisUtterance(text);
-  utterance.lang = "id-ID";
-  utterance.rate = 0.9;
-  utterance.pitch = 1.3;
-  speechSynthesis.speak(utterance);
+  if ('speechSynthesis' in window) {
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = "id-ID";
+    utterance.rate = 0.9;
+    utterance.pitch = 1.3;
+    utterance.volume = 1;
+    speechSynthesis.speak(utterance);
+  } else {
+    console.log("TTS not supported:", text);
+  }
 }
 </script>
 
