--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Waifu Hello – Fixed!</title>
+  <title>Waifu Hello – Live!</title>
   <style>
     * { margin:0; padding:0; }
     body, html { height:100%; overflow:hidden; background:linear-gradient(135deg, #ffeef8, #e0f7fa); font-family: 'Segoe UI', Arial, sans-serif; }
@@ -14,34 +14,34 @@
       font-size:14px; color:#d81b60; box-shadow:0 2px 10px rgba(0,0,0,0.1);
       max-width:80%; text-align:center; pointer-events:none;
     }
-    #info::before { content: "👋 "; }
+    #info::before { content: "Click me! "; }
   </style>
 </head>
 <body>
 
 <canvas id="canvas"></canvas>
-<div id="info">Loading waifu... Klik setelah muncul!</div>
+<div id="info">Loading Hiyori... Sabar ya~</div>
 
-<!-- CDN: Live2D Core (load duluan!) -->
+<!-- CDN: Live2D Core (RESMI) -->
 <script src="https://cubism.live2d.com/sdk-web/live2dcubismcore.min.js"></script>
 
 <!-- CDN: PixiJS -->
 <script src="https://cdn.jsdelivr.net/npm/pixi.js@7/dist/pixi.min.js"></script>
 
-<!-- CDN: Pixi-Live2D-Display (import langsung) -->
+<!-- CDN: Pixi-Live2D-Display -->
 <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display@0.5.0/dist/index.min.js"></script>
 
 <script>
-// Expose PIXI ke window (WAJIB buat plugin!)
+// Expose PIXI ke window (WAJIB!)
 window.PIXI = PIXI;
 
-// Cek kalo Live2DModel udah ada
-if (typeof PIXI.live2d === 'undefined' || typeof PIXI.live2d.Live2DModel === 'undefined') {
-  document.getElementById("info").textContent = "Error: Plugin gak load! Cek console.";
-  throw new Error("Live2DModel undefined!");
+// Cek plugin
+if (!PIXI.live2d || !PIXI.live2d.Live2DModel) {
+  document.getElementById("info").textContent = "Error: Plugin gagal load!";
+  throw new Error("Live2D plugin not loaded");
 }
 
-// Inisialisasi Pixi App
+// Pixi App
 const app = new PIXI.Application({
   view: document.getElementById("canvas"),
   transparent: true,
@@ -53,11 +53,11 @@ window.addEventListener("resize", () => {
   app.renderer.resize(window.innerWidth, window.innerHeight);
 });
 
-// Load model dari folder lokal
+// Load model dari folder live2d/
 (async () => {
   try {
-    // GUNAKAN PIXI.live2d.Live2DModel (bukan import terpisah!)
-    const model = await PIXI.live2d.Live2DModel.from("model/Hiyori.model3.json");
+    // PATH SESUAI STRUKTUR KAMU: live2d/
+    const model = await PIXI.live2d.Live2DModel.from("live2d/Hiyori.model3.json");
     app.stage.addChild(model);
 
     // Ukuran & posisi
@@ -66,21 +66,20 @@ window.addEventListener("resize", () => {
     model.anchor.set(0.5, 0.5);
     model.position.set(window.innerWidth / 2, window.innerHeight - 100);
 
-    // Idle animation (kedip mata)
+    // Idle animation
     model.motion("idle");
 
-    // Klik → ngomong + animasi
+    // Klik body → ngomong
     const greetings = [
       "Halo! Seneng ketemu kamu~",
-      "Hai hai! Lagi apa nih?",
-      "Kyaa~ Jangan klik mulu dong!",
-      "Aku Hiyori, salam kenal ya!",
+      "Hai hai! Lagi apa?",
+      "Kyaa~ Jangan klik mulu!",
+      "Aku Hiyori, salam kenal!",
       "Yay! Kamu klik aku lagi!"
     ];
 
-    // Gunakan 'hit' event buat deteksi klik (lebih akurat)
     model.on("hit", (hitAreas) => {
-      if (hitAreas.includes("Body")) {  // Case-sensitive: "Body" buat Hiyori
+      if (hitAreas.includes("Body")) {
         const text = greetings[Math.floor(Math.random() * greetings.length)];
         speak(text);
         model.motion("tap_body");
@@ -88,7 +87,7 @@ window.addEventListener("resize", () => {
       }
     });
 
-    // Drag (simple)
+    // Drag
     model.interactive = true;
     let dragging = false;
     model.on("pointerdown", () => dragging = true);
@@ -100,26 +99,21 @@ window.addEventListener("resize", () => {
       }
     });
 
-    document.getElementById("info").textContent = "Halo dari Hiyori! Klik body-nya~";
+    document.getElementById("info").textContent = "Halo! Klik body-ku~";
 
   } catch (err) {
-    document.getElementById("info").textContent = "Error load model: " + err.message;
-    console.error("Full error:", err);
+    document.getElementById("info").textContent = "Error: " + err.message;
+    console.error("Load failed:", err);
   }
 })();
 
-// Text-to-Speech (Indonesia)
+// Text-to-Speech
 function speak(text) {
-  if ('speechSynthesis' in window) {
-    const utterance = new SpeechSynthesisUtterance(text);
-    utterance.lang = "id-ID";
-    utterance.rate = 0.9;
-    utterance.pitch = 1.3;
-    utterance.volume = 1;
-    speechSynthesis.speak(utterance);
-  } else {
-    console.log("TTS not supported:", text);
-  }
+  const utterance = new SpeechSynthesisUtterance(text);
+  utterance.lang = "id-ID";
+  utterance.rate = 0.9;
+  utterance.pitch = 1.3;
+  speechSynthesis.speak(utterance);
 }
 </script>
 
